<resources>
    <string name="app_name">WEATCB</string>
    <string name="request_camera_permission">we need Camera permission</string>
    <string name="request_storage_permission">we need Storage permission</string>
    <string name="setting">Setting</string>
    <string name="on_denied_permission">If you reject permission,you can not use this service
        <br />
        Please turn on permissions at [Setting] > [Permission]
    </string>
    <string name="permission_denied">Permission Denied</string>
    <string name="text_capture_image">Capture Image</string>
    <string name="text_scan_code">Scan UPC or SKU</string>
    <string name="text_rescan">Rescan</string>
    <string name="text_upload">Upload</string>
    <string name="text_ok">OK</string>
    <string name="hint_manually_enter">Manually Enter #</string>
    <string name="text_home">Home</string>
    <string name="text_product_info">Product Info</string>

    <!--Error messages-->
    <string name="msg_NO_INTERNET_TITLE">Internet connection required</string>
    <string name="msg_NO_INTERNET_MSG">Check your internet connection</string>
    <string name="msg_NO_INTERNET_webview">Your internet connection may not be active or %1$s.</string>
    <string name="msg_goto_settings">SETTINGS</string>
    <string name="msg_server_error">The server might be down, please try again later.</string>
    <string name="msg_enter_barcode">Enter barcode</string>
    <string name="msg_enter_valid_barcode">Enter valid barcode number</string>
    <string name="msg_invalid_barcode">Invalid Barcode</string>
    <string name="msg_no_data_available">No data available.</string>
    <string name="msg_not_found">Product detail Not Found</string>
    <string name="msg_local_inv_not_found">LocalINV detail Not Found</string>
    <string name="msg_sales_history_not_found">Sales History detail Not Found</string>
    <string name="msg_related_product_not_found">Related Product detail Not Found</string>
    <string name="msg_link_not_available">Product detail page not found</string>
    <string name="msg_details_not_found">Details not found.</string>
    <string name="msg_ip_not_whitelisted">Public ip is not white listed</string>
    <string name="error_msg_connection_timeout">The request timed out please try again.</string>
    <string name="error_msg_something_went_wrong">Something went wrong. Please try again.</string>
    <string name="no_data_available">No data available</string>
    <string name="str_inquiry">Inquiry</string>
    <string name="str_local_inv">Local INV</string>
    <string name="str_sales_history">Sales History</string>
    <string name="str_photo">Photo</string>
    <string name="str_open_website"><u>Open Website</u></string>
    <string name="str_order_info">Order Info</string>
    <string name="str_related">Related</string>
    <string name="str_tbd">TBD</string>
    <string name="str_product_rating">Product Rating</string>

    <!--Header texts-->
    <string name="header_text_store">Store</string>
    <string name="header_text_num">#</string>
    <string name="header_text_qty">Qty</string>
    <string name="header_text_store_170">170</string>
    <string name="header_text_company">Company</string>
    <string name="header_text_month">Month</string>
    <string name="text_sku">SKU : %1$s</string>
    <string name="text_more"><u>More</u></string>
    <string name="msg_choose_browser">Choose browser to open</string>

    <string-array name="arr_month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>


</resources>
